--- a/index.html
+++ b/index.html
@@ -2,40 +2,36 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tutorial</title>
+    <title>Multiple object detection using pre trained model in TensorFlow.js</title>
+    <meta charset="utf-8">
+    <!-- Import the webpage's stylesheet -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1>Face Detection</h1>
+    <h1>Multiple object detection using pre trained model in TensorFlow.js</h1>
 
-  <div style="
-        width: 164px; /* 204px - (20*2) */
-        height: 286px; /* 326px - (20*2) */
-        border: 1px solid red;
-        position: absolute;
-        margin: 100px; /* x,y = 100,100 */
-      "></div>
-  <div style="
-        width: 204px;
-        height: 326px;
-        border: 1px solid red;
-        position: absolute;
-        margin: 80px; /* x,y = 80,80 */
-      "></div>
+    <p>Wait for the model to load before clicking the button to enable the webcam - at which point it will become
+        visible to use.</p>
 
-  <video id="video" autoplay style="display: none"></video>
-  <canvas id="canvas" width="600px" height="400px"></canvas>
+    <section id="demos" class="invisible">
 
-  <canvas id="canvasImg" width="600px" height="400px"></canvas>
+        <p>Hold some objects up close to your webcam to get a real-time classification! When ready click "enable webcam"
+            below and accept access to the webcam when the browser asks (check the top left of your window)</p>
 
+        <div id="liveView" class="camView">
+            <button id="webcamButton">Enable Webcam</button>
+            <video id="webcam" autoplay muted width="640" height="480"></video>
+        </div>
+    </section>
+
+    <!-- Import TensorFlow.js library -->
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs/dist/tf.min.js" type="text/javascript"></script>
+    <!-- Load the coco-ssd model to use to recognize things in images -->
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
+
+    <!-- Import the page's JavaScript to do some stuff -->
+    <script src="script_2.js" defer></script>
 </body>
-
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/blazeface"></script>
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
-<!-- <script src="coco-ssd.js"></script> -->
-<script src="script.js"></script>
 
 </html>
